// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  style={
    Object {
      "width": "100%",
    }
  }
>
  Form - 
  <div
    errors={Object {}}
    fullWidth={true}
    label="Email"
    language="en-US"
    name="email"
    type="email"
    values={Object {}}
  >
    Field
  </div>
  <div
    errors={Object {}}
    fullWidth={true}
    label="Password"
    language="en-US"
    name="password"
    type="password"
    values={Object {}}
  >
    Field
  </div>
  
  <div
    className="MuiGrid-container-1 MuiGrid-justify-xs-center-18"
  >
    <div
      disabled={false}
      text="Login"
      type="submit"
    >
      Button
    </div>
  </div>
</div>
`;

exports[`while submitting renders correctly 1`] = `
<div
  style={
    Object {
      "width": "100%",
    }
  }
>
  Form - 
  <div
    errors={Object {}}
    fullWidth={true}
    label="Email"
    language="en-US"
    name="email"
    type="email"
    values={Object {}}
  >
    Field
  </div>
  <div
    errors={Object {}}
    fullWidth={true}
    label="Password"
    language="en-US"
    name="password"
    type="password"
    values={Object {}}
  >
    Field
  </div>
  
  <div
    style={
      Object {
        "alignSelf": "center",
      }
    }
  >
    Loading
  </div>
  <div
    className="MuiGrid-container-1 MuiGrid-justify-xs-center-18"
  >
    <div
      disabled={true}
      text="Login"
      type="submit"
    >
      Button
    </div>
  </div>
</div>
`;

exports[`with custom renderButtom renders correctly 1`] = `
<div
  style={
    Object {
      "width": "100%",
    }
  }
>
  Form - 
  <div
    errors={Object {}}
    fullWidth={true}
    label="Email"
    language="en-US"
    name="email"
    type="email"
    values={Object {}}
  >
    Field
  </div>
  <div
    errors={Object {}}
    fullWidth={true}
    label="Password"
    language="en-US"
    name="password"
    type="password"
    values={Object {}}
  >
    Field
  </div>
  
  <div
    disabled={false}
    text="Login"
    type="submit"
  >
    Button
  </div>
</div>
`;

exports[`with submit errors renders correctly 1`] = `
<div
  style={
    Object {
      "width": "100%",
    }
  }
>
  Form - 
  <div
    errors={Object {}}
    fullWidth={true}
    label="Email"
    language="en-US"
    name="email"
    type="email"
    values={Object {}}
  >
    Field
  </div>
  <div
    errors={Object {}}
    fullWidth={true}
    label="Password"
    language="en-US"
    name="password"
    type="password"
    values={Object {}}
  >
    Field
  </div>
  <div>
    Error
  </div>
  <div
    className="MuiGrid-container-1 MuiGrid-justify-xs-center-18"
  >
    <div
      disabled={false}
      text="Login"
      type="submit"
    >
      Button
    </div>
  </div>
</div>
`;

exports[`with validation errors renders correctly 1`] = `
<div
  style={
    Object {
      "width": "100%",
    }
  }
>
  Form - 
  <div
    errors={
      Object {
        "email": "is not a valid email",
      }
    }
    fullWidth={true}
    label="Email"
    language="en-US"
    name="email"
    type="email"
    values={Object {}}
  >
    Field
  </div>
  <div
    errors={
      Object {
        "email": "is not a valid email",
      }
    }
    fullWidth={true}
    label="Password"
    language="en-US"
    name="password"
    type="password"
    values={Object {}}
  >
    Field
  </div>
  
  <div
    className="MuiGrid-container-1 MuiGrid-justify-xs-center-18"
  >
    <div
      disabled={true}
      text="Login"
      type="submit"
    >
      Button
    </div>
  </div>
</div>
`;
